[package]
categories = ["asynchronous", "network-programming"]
edition = "2021"
name = "tokio-graceful"
version = "0.2.0"
description = "util for graceful shutdown of tokio applications"
homepage = "https://github.com/plabayo/tokio-graceful"
readme = "README.md"
keywords = ["io", "async", "non-blocking", "futures"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/plabayo/tokio-graceful"

[dependencies]
tokio = { version = "1", features = ["rt", "signal", "sync", "macros", "time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["net", "rt-multi-thread", "io-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
